force-app/main/default/objects/Nimbus_Order__c/Nimbus_Order__c.object-meta.xml
<CustomObject>
    <description>Nimbus Electronics customer orders. Used by Agentforce agents to look up order status, tracking, and delivery information.</description>
    <label>Nimbus Order</label>
    <nameField>
        <displayFormat>NIM-{00000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nimbus Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>