force-app/main/default/objects/Nimbus_Order__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <description>Estimated delivery date</description>
    <label>Estimated Delivery</label>
    <type>Date</type>
</CustomField>