force-app/main/default/objects/Nimbus_Order__c/fields/Shipping_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Carrier__c</fullName>
    <description>Shipping carrier name</description>
    <label>Shipping Carrier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>