force-app/main/default/objects/Nimbus_Order__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Shipping carrier tracking number</description>
    <label>Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>